<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/card" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/offer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/szak_cs"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/employer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/tel_s_ital_kft"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/offer_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="8dp"
            android:text="@string/tehets_ges_szak_csot_keres_nk_j_l_men_tterm_nknek" />

        <TextView
            android:id="@+id/applied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="8dp"
            android:text="@string/jelentkezve"
            android:visibility="gone"/>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/jelentkez_s" />

        <Button
            android:id="@+id/delete_application_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/jelentkez_s_lemond_sa"
            android:visibility="gone" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
